# axum-best

./: .env  Cargo.toml  Dockerfile  README.md  README_ZH.md  deny.toml  docker-compose.yaml  rustfmt.toml
.github/workflows/: rust.yml
.sqlx/: query-3157b1ef15b635f6f1516c13f2509a8825037f16a7e0a221cf23651f15e9cb36.json  query-452785ef03f78c4c47c9e0a04243d3b46775d75a3dcd2810f4f4af810960cbd2.json  query-4678a2d5c7a3bf1e5cd1a9641d5abddea7cca0459bdeace6b3b24f5e73e293bb.json  query-745c788598735b27422a818277fbc5848839da5cb2ba41b5a2895e8c21f210d2.json  query-ab3c936f90edc6f5f22157c552ead8ecfc8be34e92d846b97d4250fb00a770b9.json  query-b2c5aa02b591a406366bbfdc06cbb8d05c2c232ca2b7bf9b33216ded7a1049ce.json  query-def10aae890f31ad820c8e1f902b5d0175afb0fd5a8e4ee95b996a25dba01cfe.json  query-f3a3a8cbbc56ace6c3d618381f3695036386101066a932a0fc66fa813a3ecb83.json  query-f667a11ab3d7c7b68ba98c4ad42cb2b2eb1c41aa2a94c1c98cf5f8d8fac908c6.json  query-f73beb7b3b108b72a4bf44afe4f881704b15a6917a2e32246b283f7b2969180b.json
benches/: models_user.rs  utils_benchmark.rs
etc/: config.toml
examples/: db_demo.rs  primitive_demo.rs  test_random_uniqueness.rs  test_valid_code.rs  user_crud_demo.rs
migrations/: 20251006085433_add_wx_open_id_to_user_info.sql  20251006_user_info.sql
src/: lib.rs  main.rs
src/conf/: README.md  mod.rs
src/core/: README.md  mod.rs  rest.rs  state.rs
src/data/: cache.rs  mysql.rs
src/errors/: README.md  mod.rs
src/handlers/: foo.rs  health.rs  mod.rs  user.rs
src/logx/: mod.rs
src/models/: README.md  mod.rs  primitive.rs  user.rs
src/repos/: user.rs
src/routers/: REMDME.md  mod.rs
src/services/: README.md  foo.rs  mod.rs  user.rs
src/srvCtx/: mod.rs
src/transport/: http.rs
src/types/: foo.rs  user.rs
src/utils/: mod.rs
tests/: index.txt
