[package]
name = "axum-best"
version = "0.1.0"
edition = "2024"
description = "For the optimal axum development experience"
authors = ["xx 2356450144@qq.com"]
keywords = [
    "Optimal Axum Development Experience",
    "Axum Development",
    "Rust Web Framework",
]
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
human-panic = { version = "2.0.3", features = ["color"] }
axum = { version = "0.8.6", features = ["default", "macros", "query"] }
clap = { version = "4.4.6", features = [
    "derive",
    "wrap_help",
    "env",
    "string",
    "default",
] }
toml = { version = "0.9.7", features = ["default"] }
anyhow = { version = "1.0.100", features = ["default"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["default"] }
sqlx = { version = "0.8.6", features = [
    "sqlx-mysql",
    "mysql",
    "chrono",
    "runtime-tokio",
] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.20", features = ["chrono", "json"] }
smart-default = { version = "0.7.1" }
log = { version = "0.4.28", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
axum-valid = { version = "0.24.0", features = ["query"] }
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = { version = "1.5.0", features = ["spin"] }
derivative = { version = "2.1.3" }
tower-http = { version = "0.6.6", features = [
    "trace",
    "compression-full",
    "decompression-full",
    "cors",
    "timeout",
] }
tower = { version = "0.5.2", features = ["timeout", "tracing", "util"] }
redis = { version = "0.32.7", features = ["tokio-comp", "r2d2", "json"] }
rand = { version = "0.9.2" }
sha2 = { version = "0.10.9" }
sha1 = { version = "0.10.6" }
md-5 = { version = "0.10.6" }
digest = { version = "0.10.7" }
r2d2 = { version = "0.8.10" }
tower-request-id = { version = "0.3.0" }
ureq = { version = "3.1.2", features = ["json"] }
local-ip-address = "0.6.5"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
manifest-dir-macros = { version = "0.1.18", features = ["default"] }

[[bench]]
name = "utils_benchmark"
harness = false

[[bench]]
name = "models_user"
harness = false

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
strip = "none"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
opt-level = 3
overflow-checks = true   #  integer overflow checks.
debug = false
debug-assertions = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
